--- a/index.html
+++ b/index.html
@@ -433,10 +433,12 @@
                                     <!-- ttm-box-view-overlay -->
                                     <div class="ttm-box-view-overlay ttm-portfolio-box-view-overlay">
                                         <div class="featured-iconbox ttm-media-link">
-                                            <a href="products/vr99.html" class="ttm_link"><i class="ti ti-link"></i></a>
+                                            <a href="products/whisker_ceramics.html" class="ttm_link"><i
+                                                    class="ti ti-link"></i></a>
                                         </div>
                                         <div class="content-post content-portfolio-post">
-                                            <h2 class="title-post"><a href="products/vr99.html">Whisker Ceramic
+                                            <h2 class="title-post"><a href="products/whisker_ceramics.html">Whisker
+                                                    Ceramic
                                                     Inserts</a></h2>
                                         </div>
                                     </div><!-- ttm-box-view-overlay end-->
