--- a/products/pcdcbn.html
+++ b/products/pcdcbn.html
@@ -140,8 +140,8 @@
                                         </ul>
                                     </aside>
                                     <aside class="widget widget_media_image">
-                                        <a href="#"><img class="img-fluid lazy" src="../images/banner-image.jpg"
-                                                alt="banner-image"></a>
+                                        <a href="./contact.html"><img class="img-fluid lazy"
+                                                src="../images/banner-image.jpg" alt="banner-image"></a>
                                     </aside>
                                 </div>
                             </div>
