--- a/contact.html
+++ b/contact.html
@@ -224,16 +224,15 @@
         <script src="js/main.js"></script>
 
 
-        <script src="https://maps.google.com/maps/api/js?key=AIzaSyBUe82UiAZdGakcJhL6POQrTQsbZiuQncI&callback=initMap"
+        <script src="https://maps.google.com/maps/api/js?key=AIzaSyAYEyK0IJEcDbYW2s2yZhV_bJitUik1Mas&callback=initMap"
             type="text/javascript"></script>
         <!-- Javascript end-->
 
         <script type="text/javascript">
-
             function initialize() {
-                var latlng = new google.maps.LatLng(-34.397, 150.644);
+                var latlng = new google.maps.LatLng(26.7021947, -81.9559309);
                 var myOptions = {
-                    zoom: 8,
+                    zoom: 17,
                     center: latlng,
                     mapTypeId: google.maps.MapTypeId.ROADMAP
                 };
@@ -241,7 +240,6 @@
                     myOptions);
             }
             google.maps.event.addDomListener(window, "load", initialize);
-
         </script>
 
         <!-- Javascript end-->
