contact link fix

--- a/products/laydown.html
+++ b/products/laydown.html
@@ -119,7 +119,7 @@
                                         </ul>
                                     </aside>
                                     <aside class="widget widget_media_image">
-                                        <a href="./contact.html"><img class="img-fluid lazy"
+                                        <a href="../contact.html"><img class="img-fluid lazy"
                                                 src="../images/banner-image.jpg" alt="banner-image"></a>
                                     </aside>
                                 </div>
