changed icon from headphone to mobile

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                         <div class="col-lg-12">
                                             <div class="featured-box style10 left-icon">
                                                 <div class="featured-icon icon-shape-square ttm-bgcolor-skincolor">
-                                                    <i class="ti ti-headphone"></i>
+                                                    <i class="ti ti-mobile"></i>
                                                 </div>
                                                 <div class="featured-content ttm-bgcolor-darkgrey">
                                                     <div class="featured-desc">
