add distributor Sussex Tool

--- a/distributors.html
+++ b/distributors.html
@@ -931,7 +931,8 @@
                             Blackhawk Industrial | 855-610-1001 | <a href="//www.bhid.com/"
                                 target="_BLANK">bhid.com</a><br />
                             Jonas Service and Supply | 800-336-2401 | <a href="//www.jonasservice.com/"
-                                target="_BLANK">jonasservice.com</a></p>
+                                target="_BLANK">jonasservice.com</a><br />
+                            Sussex Tool | 262-251-4020 | <a href="https://sussextool.com" target="_BLANK"></p>
                         <p>
                             <!-- /wp:paragraph -->
                         </p>
