--- a/distributors.html
+++ b/distributors.html
@@ -932,7 +932,7 @@
                                 target="_BLANK">bhid.com</a><br />
                             Jonas Service and Supply | 800-336-2401 | <a href="//www.jonasservice.com/"
                                 target="_BLANK">jonasservice.com</a><br />
-                            Sussex Tool | 262-251-4020 | <a href="https://sussextool.com" target="_BLANK"></p>
+                            Sussex Tool | 262-251-4020 | <a href="https://sussextool.com" target="_BLANK">sussextool.com</a></p>
                         <p>
                             <!-- /wp:paragraph -->
                         </p>
