removed extra space in distributors list

--- a/distributors.html
+++ b/distributors.html
@@ -229,8 +229,9 @@
                         <p>
                             <!-- wp:paragraph -->
                         </p>
-                        <p>COE &amp; Brown Company | 203-288-9211</p><br>
-                        <p>Turtle & Hughes | 732-574-3600 | <a href="//www.turtle.com/" target="_BLANK">turtle.com</a>
+                        <p>COE &amp; Brown Company | 203-288-9211<br>
+                        Turtle & Hughes | 732-574-3600 | <a href="//www.turtle.com/" target="_BLANK">turtle.com</a>
+                        </p>
                         <p>
                             <!-- /wp:paragraph -->
                         </p>
